--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,4 +32,9 @@ jobs:
             - '92:4f:71:a8:fd:a2:99:e1:87:13:0e:7e:b5:ec:4e:a2'
       - checkout
       - run: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> $HOME/.npmrc'
-      - run: ./scripts/homebound-publish-patch.sh improved-business-days
+      - run:
+          command: ./scripts/homebound-publish-patch.sh improved-business-days
+          environment:
+            GIT_AUTHOR_NAME: Circle CI
+            GIT_COMMITTER_NAME: Circle CI
+            EMAIL: eng@homebound.com
