--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ workflows:
       - build:
           context:
             - dockerhub
-            - npm
+            - npm-publish
           filters:
             branches:
               only:
